infra/extra-kube-manifests/chat-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: chat-ws-route
  namespace: edulearn-app

spec:
  hostnames:
    - api.muhammedshafeeque.online

  parentRefs:
    - name: app-alb-gateway
      namespace: default
      sectionName: http

    - name: app-alb-gateway
      namespace: default
      sectionName: https

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io

      backendRefs:
        - name: edulearn-chat
          port: 3000
