infra/extra-kube-manifests/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-route
  namespace: edulearn-app
spec:
  hostnames:
    - "api.muhammedshafeeque.online"
  parentRefs:
  - group: gateway.networking.k8s.io
    namespace: default
    kind: Gateway
    name: app-alb-gateway
    sectionName: http
  - group: gateway.networking.k8s.io
    namespace: default
    kind: Gateway
    name: app-alb-gateway
    sectionName: https
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /api
    backendRefs:
      - name: edulearn-api-gateway
        port: 4000
